[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-forecasting-scm"
version = "0.1.0"
description = "Causal discovery and counterfactual simulation for multivariate forecasting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "networkx>=3.2",
    "causal-learn>=0.1.3",
    "plotly>=5.18",
    "pyvis>=0.3",
    "streamlit>=1.30",
    "flask>=3.0",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
deep-learning = [
    "torch>=2.1",
]
experiment = [
    "mlflow>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
